# renderer

./: Cargo.toml
mesh/: Cargo.toml
mesh/src/: error.rs  lib.rs  triangle.rs
wgpu_renderer/: Cargo.toml
wgpu_renderer/src/: camera.rs  error.rs  lib.rs  light.rs  mesh_buffers.rs  mod.rs  texture.rs  transformation.rs
wgpu_renderer/src/render_pipeline/: mod.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
wgpu_renderer_cli/: Cargo.toml
wgpu_renderer_cli/src/: bounding_box.rs  error.rs  main.rs
