[package]
name = "wgpu_renderer"
version = "0.1.0"
authors = ["Patrick Sullivan <patrick.sullivan@hey.com>"]
edition = "2018"

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
image = "0.23"
mesh = { path = "../mesh" }
wgpu = "0.7"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
shaderc = "0.7"